# Project-Lwanga

./: .gitignore  .lwangafmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_ICONS_SUMMARY.md  FORMATTER_AND_BRANDING.md  ICON_GENERATION_COMPLETE.md  INSTALL.md  LICENSE  README.md  RELEASE_STEPS.md  TODOS.md  instrutions.md  lwanga_1.0.0-1_amd64.buildinfo  lwanga_1.0.0-1_amd64.changes  lwanga_1.0.0-1_amd64.deb.sha256  lwanga_1.0.2-1_amd64.buildinfo  lwanga_1.0.2-1_amd64.changes  lwanga_1.0.2-1_amd64.deb.sha256  lwanga_1.0.3-1_amd64.deb.sha256
.kiro/specs/lwanga-programming-language/: design.md  tasks.md
assets/icons/: README.md
compiler/: CMakeLists.txt  INSTALL.md  README.md
compiler/include/: AST.h  Backend.h  CompilerUI.h  IRGenerator.h  Lexer.h  ModuleLoader.h  Obfuscator.h  Parser.h  Preprocessor.h  SymbolTable.h  Token.h  TypeChecker.h  TypeSystem.h  Version.h.in
compiler/src/backend/: Backend.cpp  Obfuscator.cpp
compiler/src/codegen/: IRGenerator.cpp
compiler/src/driver/: ModuleLoader.cpp  main.cpp
compiler/src/lexer/: Lexer.cpp  Preprocessor.cpp  Token.cpp
compiler/src/parser/: Parser.cpp
compiler/src/types/: SymbolTable.cpp  TypeChecker.cpp  TypeSystem.cpp
compiler/tests/: CMakeLists.txt  backend_test.cpp  comprehensive_test.cpp  cross_compilation_test.cpp  debug_asm_test  debug_asm_test.cpp  debug_atomic_test  debug_atomic_test.cpp  debug_extended_asm_test  debug_extended_asm_test.cpp  debug_function_count.cpp  debug_parse_atomic  debug_parse_atomic.cpp  determinism_test.cpp  driver_integration_test.cpp  e2e_test.cpp  enc_block_test.cpp  enc_property_test.cpp  function_pointer_test.cpp  hello_llvm_test.cpp  integration_test.cpp  ir_generator_test.cpp  lexer_test.cpp  module_test.cpp  obfuscation_test.cpp  parser_test.cpp  preprocessor_test.cpp  register_test.cpp  type_system_test.cpp  unsafe_test.cpp
docs/: README.md  cheat-sheet.md  compiler.md  formatter.md  highlighter.md  language-reference.md  style-guide.md  syscalls.md  tutorial.md
docs/tutorial/: 01-introduction.md  02-hello-world.md  03-basic-syntax.md  04-variables-types.md  05-numbers.md  06-functions.md  07-conditionals.md  08-loops.md  09-operators.md  10-pointers.md  11-strings.md  12-arrays.md  13-structs.md  14-packed-structs.md  15-type-system.md  16-constants.md  17-memory-model.md  18-pointers-advanced.md  19-unsafe-blocks.md  20-memory-safety.md  21-syscalls-intro.md  22-file-operations.md  23-process-management.md  24-network-programming.md  25-signals.md  26-inline-assembly.md  27-naked-functions.md  28-registers.md  29-encrypted-strings.md  30-shellcode-basics.md  31-obfuscation.md  32-exploit-development.md  33-preprocessor.md  34-modules.md  35-optimization.md  36-debugging.md  37-tcp-server.md  38-port-scanner.md  39-memory-dumper.md  40-final-project.md  (+1 more)
examples/: README.md  encrypted_strings  encrypted_strings.lwanga  hello_world  hello_world.lwanga  hello_world_with_logo.lwanga  shellcode.lwanga  shellcode_with_banner.lwanga  tcp_server.lwanga  test_asm_simple.lwanga  test_errors.lwanga  test_naked.lwanga  test_preproc.lwanga  test_shellcode_simple.lwanga
extensions/: INSTALL.md  PHASE3_COMPLETE.md  README.md  VALIDATION_REPORT.md
extensions/vim/: README.md
extensions/vim/ftdetect/: lwanga.vim
extensions/vim/ftplugin/: lwanga.vim
extensions/vim/syntax/: lwanga.vim
extensions/vscode/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package.json
extensions/vscode/icons/: lwanga-icon-theme.json
extensions/vscode/snippets/: lwanga.json
extensions/vscode/src/: extension.ts
extensions/vscode/syntaxes/: lwanga.tmLanguage.json
lwanga-programming-language/: requirements.md
packaging/: PHASE4_COMPLETE.md  RELEASE.md  build-debian.sh  build-packages.sh  lwanga.xml
packaging/arch/: .SRCINFO  PKGBUILD
packaging/debian/: changelog  control  copyright  postinst  postrm  rules
packaging/docker/: Dockerfile  README.md  docker-compose.yml
packaging/windows/: README.md  WINDOWS_SUPPORT.md  build-windows.ps1  installer.nsi
packaging/windows/chocolatey/: lwanga.nuspec
packaging/windows/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
stdlib/: README.md
tools/: README.md  generate_file_icons.sh
tools/formatter/: CMakeLists.txt
tools/formatter/include/: Formatter.h
tools/formatter/src/: Formatter.cpp  main.cpp
tools/highlighter/: CMakeLists.txt  README.md
tools/highlighter/include/: SyntaxHighlighter.h
tools/highlighter/src/: SyntaxHighlighter.cpp  main.cpp
